--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <button id="btn" onclick="start()">Jogar </button>
     </div>
     <h2 id="score">Score: 0 </h2>
+    <a href="https://github.com/samuelhms">github.com/samuelhms</a>
     
     
 </body>
